ci(infra)[#248][#246]: add GET /version on deployable surfaces
fixes #248
refs #246
